--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-#ignore the whole test dir for the moment
+#ignore the whole test dir for the moment and the target dir
 src/test/
+target/
 
 *.class
 *.DS_Store
