--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -4,5 +4,5 @@ solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
-#googleAnalytics=UA-33310077-1
+googleAnalytics=UA-33310077-1
 liveSite=false
