Changes for the phenotype summary on gene page.

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,25 @@
 
 	<dependencies>
 
+	<dependency>
+	<groupId>org.bbop</groupId>
+	<artifactId>OWLTools-Core</artifactId>
+	<version>0.2.1-SNAPSHOT</version>
+</dependency>
+
+	<dependency>
+		<groupId>net.sourceforge.owlapi</groupId>
+		<artifactId>owlapi-distribution</artifactId>
+		<version>3.4.5</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.bbop</groupId>
+		<artifactId>OWLTools-Oort</artifactId>
+		<version>0.2.1-SNAPSHOT</version>
+	</dependency>
+	
+
 		<dependency>
 			<groupId>se.jiderhamn</groupId>
 			<artifactId>classloader-leak-prevention</artifactId>
@@ -481,6 +500,23 @@
 
 
 	<repositories>
+	<!--  OWL TOOLS -->
+	<repository>
+		<id>BerkeleyBOP</id>
+		<name>Berkeley BOP maven repository</name>
+		<url>http://code.berkeleybop.org/maven/repository/</url>
+		<snapshots>
+			<enabled>true</enabled>
+		</snapshots>
+	</repository>
+	<repository>
+		<id>BerkeleyBOPSnapshot</id>
+		<url>http://code.berkeleybop.org/maven/snapshot-repository/</url>
+		<snapshots>
+			<enabled>true</enabled>
+		</snapshots>
+	</repository>
+	
 		<!-- JBoss Repository used for Java EE 6 pieces -->
 		<repository>
 			<id>repository.jboss.org</id>
