--- a/pom.xml
+++ b/pom.xml
@@ -721,6 +721,7 @@
 							<jsSourceDir>js</jsSourceDir>
 							<jsSourceFiles>
 								<jsSourceFile>documentationConfig.js</jsSourceFile>
+								<jsSourceFile>searchAndFacet/homepage_seach_button_enter.js</jsSourceFile>
 								<jsSourceFile>searchAndFacet/searchAndFacetConfig.js</jsSourceFile>
 								<jsSourceFile>vendor/DataTables-1.9.4/jquery.dataTables.js</jsSourceFile>
 								<jsSourceFile>vendor/DataTables-1.9.4/core.filter.js</jsSourceFile>
