--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -124,6 +124,9 @@
 		<url-pattern>/proxy/*</url-pattern>
 	</servlet-mapping>
 
+	<welcome-file-list>
+    	<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 <!--  
 	<servlet>
 		<servlet-name>GBrowseProxyServlet</servlet-name>
