--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,13 @@
 		<version>0.2.1-SNAPSHOT</version>
 	</dependency>
 	
-
+ <!--Phenodigm disease pages dependencies-->
+      <dependency>
+           <groupId>uk.ac.sanger</groupId>
+           <artifactId>phenodigm2-core</artifactId>
+           <version>1.1</version>
+       </dependency>
+       
 		<dependency>
 			<groupId>se.jiderhamn</groupId>
 			<artifactId>classloader-leak-prevention</artifactId>
