add the utils directory to the datamodel classifier to include the supporting classes

--- a/pom.xml
+++ b/pom.xml
@@ -880,6 +880,7 @@
 							<includes>
 								<include>**/dao/*</include>
 								<include>**/pojo/*</include>
+								<include>**/phenotype/util/*</include>
 								<include>**/data/europhenome/*</include>
 								<include>**/data/impress/*</include>
 								<include>**/stats/**</include>
