some progress with the menu. changed drupalBaseUrl in pom for localhost (temporary)

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -41,7 +40,7 @@
 			to EBI servers for performance -->
 		<solrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr</solrUrl>
 		<internalSolrUrl>http://ves-ebi-d0.ebi.ac.uk:8090/mi/impc/dev/solr</internalSolrUrl>
-		<drupalBaseUrl>https://dev.mousephenotype.org</drupalBaseUrl>
+		<drupalBaseUrl>https://test.mousephenotype.org</drupalBaseUrl>
 		<mediaBaseUrl>https://dev.mousephenotype.org/data/media</mediaBaseUrl>
 		<googleAnalytics></googleAnalytics>
 		<liveSite>false</liveSite>
@@ -1189,4 +1188,3 @@
 	</profiles>
 
 </project>
-
