add the generic utils to the datamodel

--- a/pom.xml
+++ b/pom.xml
@@ -885,6 +885,7 @@
 								<include>**/data/europhenome/*</include>
 								<include>**/data/impress/*</include>
 								<include>**/stats/**</include>
+								<include>**/generic/util/*</include>
 							</includes>
 						</configuration>
 					</plugin>
