add web/utils to the datamodel (required by JSONRestUtil)

--- a/pom.xml
+++ b/pom.xml
@@ -886,6 +886,7 @@
 								<include>**/data/impress/*</include>
 								<include>**/stats/**</include>
 								<include>**/generic/util/*</include>
+								<include>**/web/util/*</include>
 							</includes>
 						</configuration>
 					</plugin>
