--- a/pom.xml
+++ b/pom.xml
@@ -1073,6 +1073,40 @@
 			</build>
 
 		</profile>
+		
+		<profile>
+			<id>web-tests</id>
+
+			<properties>
+				<baseUrl>/data</baseUrl>
+				<!-- The solrUrl bypasses the proxy at mousephenotype.org and goes directly 
+					to EBI servers for performance -->
+				<solrUrl>https://wwwdev.ebi.ac.uk/mi/impc/dev/solr</solrUrl>
+				<internalSolrUrl>http://localhost:8090/mi/impc/dev/solr</internalSolrUrl>
+				<drupalBaseUrl>https://dev.mousephenotype.org</drupalBaseUrl>
+				<mediaBaseUrl>https://dev.mousephenotype.org/data/media</mediaBaseUrl>
+				<liveSite>false</liveSite>
+			</properties>
+
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.4.2</version>
+						<configuration>
+							<skipTests>false</skipTests>
+							 <includes>
+           							 <include>**PageTest.java</include>
+         					 </includes>
+						</configuration>
+					</plugin>
+
+				</plugins>
+			</build>
+
+		</profile>
 
 		<profile>
 			<id>external-test</id>
