--- a/pom.xml
+++ b/pom.xml
@@ -1111,6 +1111,25 @@
 
 			<build>
 				<plugins>
+				<plugin>
+       			<groupId>org.codehaus.mojo</groupId>
+        		<artifactId>build-helper-maven-plugin</artifactId>
+        		<version>1.8</version>
+       			 <executions>
+          			<execution>
+            			<id>add-test-source</id>
+           				 <phase>generate-test-sources</phase>
+            				<goals>
+             					 <goal>add-test-source</goal>
+           					 </goals>
+            			<configuration>
+              				<sources>
+              					  <source>${project.basedir}/src/test/web</source>
+             				 </sources>
+            			</configuration>
+         			 </execution>
+        		</executions>
+      		</plugin>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
