--- a/pom.xml
+++ b/pom.xml
@@ -1117,6 +1117,9 @@
 						<version>2.4.2</version>
 						<configuration>
 							<skipTests>false</skipTests>
+							<excludes>
+								<exclude>**/test/java/**</exclude>
+							</excludes>
 						</configuration>
 					</plugin>
 
