--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -28,6 +28,21 @@
 		<param-value>/WEB-INF/app-config.xml</param-value>
 	</context-param>
 
+	<context-param>
+      <param-name>baseUrl</param-name>
+      <param-value>${baseUrl}</param-value>
+   </context-param>
+   
+   <context-param>
+      <param-name>internalSolrUrl</param-name>
+      <param-value>${internalSolrUrl}</param-value>
+   </context-param>
+   
+   <context-param>
+      <param-name>liveSite</param-name>
+      <param-value>${liveSite}</param-value>
+   </context-param>
+
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
