--- a/src/test/resources/appConfig.properties
+++ b/src/test/resources/appConfig.properties
@@ -1,9 +1,18 @@
-baseUrl=/PhenotypeArchive
+# baseUrl=http://localhost:8080/phenotype-archive
+baseUrl=http://dev.mousephenotype.org/data
 deploymentPath=/phenotype-archive
 solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
+phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
 liveSite=false
 
+# Selenium setup
+# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
+# seleniumUrl=http://localhost:8080/phenotype-archive
+seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
+
+# selenium web drivers: chrome, firefox, iexplore, safari (case insensitive)
+seleniumDrivers=firefox, chrome
