This change: 1) Upgrades to the latest JUnit, 2) refactors tests to use test-config.xml instead of app-config.xml. Using app-config.xml required that properties be specified in both the test and non-test copies of app-config.xml, 3) refactored GetAllPhenotypePagesTest to use selenium hub properties specified in testConfig.properties.

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -10,9 +10,9 @@ phenodigmSolrUrl=http://solr-slave-sanger.sanger.ac.uk/solr451/phenodigm
 liveSite=false
 
 # Selenium setup
-# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
 # seleniumUrl=http://localhost:8080/phenotype-archive
-seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
-
-# selenium web drivers: chrome, firefox, iexplore, safari (case insensitive)
-seleniumDrivers=firefox, chrome
+seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
+# desiredCapabilities=chromeDesiredCapabilities
+desiredCapabilities=firefoxDesiredCapabilities
+# desiredCapabilities=iexploreDesiredCapabilities
+# desiredCapabilities=safariDesiredCapabilities
