Just discovered that JUnit creates a new test class instance for every test method. As such, removed most instance variables (auto and static) and changed the default browser to chrome, which executes all tests successfully on the default mi-selenium-win selenium test box (firefox fails for no obvious reason on some of the same tests).

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -11,8 +11,10 @@ liveSite=false
 
 # Selenium setup
 # seleniumUrl=http://localhost:8080/phenotype-archive
+# seleniumUrl=http://localhost:4444/wd/hub
 seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
-# desiredCapabilities=chromeDesiredCapabilities
-desiredCapabilities=firefoxDesiredCapabilities
+
+desiredCapabilities=chromeDesiredCapabilities
+# desiredCapabilities=firefoxDesiredCapabilities
 # desiredCapabilities=iexploreDesiredCapabilities
 # desiredCapabilities=safariDesiredCapabilities
