--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -13,7 +13,7 @@ liveSite=false
 # seleniumUrl=http://localhost:8080/phenotype-archive
 # seleniumUrl=http://localhost:4444/wd/hub
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
-seleniumUrl=http://mi-selenium-mac:4444/wd/hub
+seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
 
 # desiredCapabilities=chromeDesiredCapabilities
 desiredCapabilities=firefoxDesiredCapabilities
