--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -12,9 +12,16 @@ liveSite=false
 # Selenium setup
 # seleniumUrl=http://localhost:8080/phenotype-archive
 # seleniumUrl=http://localhost:4444/wd/hub
+
+# show pages changing, but is NOT run as a service, neet to manually start it
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
+
+# does not show pages changing, but is run as a service
+# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
+
 seleniumUrl=http://mi-selenium-mac:4444/wd/hub
 
+# here we specify the browsers to test on
 # desiredCapabilities=chromeDesiredCapabilities
 desiredCapabilities=firefoxDesiredCapabilities
 # desiredCapabilities=iexploreDesiredCapabilities
