--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -13,7 +13,7 @@ liveSite=false
 # seleniumUrl=http://localhost:8080/phenotype-archive
 # seleniumUrl=http://localhost:4444/wd/hub
 
-# show pages changing, but is NOT run as a service, neet to manually start it
+# show pages changing, but is NOT run as a service, need to manually start it
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
 
 # does not show pages changing, but is run as a service
