--- a/pom.xml
+++ b/pom.xml
@@ -587,7 +587,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.15</version>
                     <configuration>
-                        <skipTests>false</skipTests>
+                        <skipTests>true</skipTests>
                         <testFailureIgnore>true</testFailureIgnore>
                         <excludes>
                             <exclude>**PageTest.java</exclude>
