added comment for where to change to point to new base solr url (eg, for testing purpose)

--- a/src/main/resources/appConfig.properties
+++ b/src/main/resources/appConfig.properties
@@ -1,7 +1,12 @@
 baseUrl=/PhenotypeArchive
 deploymentPath=/phenotype-archive
+
+# change both solrUrl and internalSolrUrl to point to new place (OR POM file)
 solrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
 internalSolrUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/solr
+#solrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
+#internalSolrUrl=http://ves-ebi-d0.ebi.ac.uk:8090/build_indexes_ci
+
 drupalBaseUrl=https://dev.mousephenotype.org
 mediaBaseUrl=http://wwwdev.ebi.ac.uk/mi/impc/dev/phenotype-archive/media
 googleAnalytics=UA-33310077-1
