Moved Service classes to their own package

--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -14,8 +14,8 @@ liveSite=false
 # seleniumUrl=http://localhost:4444/wd/hub
 
 # Shows pages changing, but is NOT run as a service, need to manually start it
-# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
-seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
+seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
+#seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
 
 # Does not show pages changing, but is run as a service
 # seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
@@ -24,7 +24,7 @@ seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
 # additional browser/version/platform combinations as needed. These beans are
 # defined in src/test/resources/test-config.xml.
 
-# desiredCapabilities=chromeDesiredCapabilities
-desiredCapabilities=firefoxDesiredCapabilities
+desiredCapabilities=chromeDesiredCapabilities
+# desiredCapabilities=firefoxDesiredCapabilities
 # desiredCapabilities=iexploreDesiredCapabilities
 # desiredCapabilities=safariDesiredCapabilities
