--- a/pom.xml
+++ b/pom.xml
@@ -890,6 +890,7 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-jar-plugin</artifactId>
+                        <version>2.4</version>
                         <executions>
                             <execution>
                                 <id>make-jar</id>
@@ -918,6 +919,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.1</version>
                         <executions>
                             <execution>
                                 <id>install-jar</id>
@@ -963,6 +965,7 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-jar-plugin</artifactId>
+                        <version>2.4</version>
                         <executions>
                             <execution>
                                 <id>make-jar</id>
@@ -983,6 +986,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-install-plugin</artifactId>
+                        <version>2.5.1</version>
                         <executions>
                             <execution>
                                 <id>install-jar</id>
