--- a/pom.xml
+++ b/pom.xml
@@ -910,6 +910,7 @@
                                 <include>**/data/europhenome/*</include>
                                 <include>**/data/impress/*</include>
                                 <include>**/stats/**</include>
+                                <include>**/service/**</include>
                                 <include>**/phenotype/error/**</include>
                                 <include>**/generic/util/*</include>
                                 <include>**/web/util/*</include>
