add bean package to datamodel export

--- a/pom.xml
+++ b/pom.xml
@@ -904,6 +904,7 @@
 
                             <classifier>datamodel</classifier>
                             <includes>
+                                <include>**/bean/*</include>
                                 <include>**/dao/*</include>
                                 <include>**/pojo/*</include>
                                 <include>**/phenotype/util/*</include>
