--- a/src/test/resources/testConfig.properties
+++ b/src/test/resources/testConfig.properties
@@ -14,11 +14,10 @@ liveSite=false
 # seleniumUrl=http://localhost:4444/wd/hub
 
 # Shows pages changing, but is NOT run as a service, need to manually start it
-# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
-seleniumUrl=http://mi-selenium-mac.windows.ebi.ac.uk:4444/wd/hub
+seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4443/wd/hub
 
 # Does not show pages changing, but is run as a service
-# seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
+#seleniumUrl=http://mi-selenium-win.windows.ebi.ac.uk:4444/wd/hub
 
 # Here we specify the browsers, versions, and platforms to test on. We can add
 # additional browser/version/platform combinations as needed. These beans are
