Refactored tests to wait for pages to load and to thread-wait so as to not overload the Harwell servers. Folded GetGenePagesTest into the already existing GenePageTest and standardized the output messages. Renamed PhenotypePagesTest to PhenotypePageTest to be consistent with existing test file names.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ nb-configuration.xml
 datasourcesConfig.properties
 /WebContent/WEB-INF/datasources-config.xml
 /nbactions.xml
+/nbactions-web-tests.xml
